--- a/src/assets/sass/_app.scss
+++ b/src/assets/sass/_app.scss
@@ -1,17 +1,27 @@
 #app {
-  background-color: $background;
+  background-color: #f8f8f8;;
+  // .hero {
+  //   background-image: url('./assets/images/dog-agility-camp.jpg');
+  //   background-attachment: fixed;
+  //   // background-position: center;
+  //   background-repeat: no-repeat;
+  //   background-size: cover;
+  //   position: relative;
+  //   width: 100%;
+  //   margin-top: -65px;
+  //   height: 100vh;
+  // }
   .hero {
-    background-image: url('./assets/images/dog-agility-camp.jpg');
-    background-attachment: fixed;
-    // background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    width: 100%;
-    margin-top: -65px;
-    height: 500px;
+    height: 150px;
+  }
+  .logo {
+    position: absolute;
+    top: 15%;
+    left:50%;
+    transform: translateX(-50%) translateY(-50%);
   }
   .navigation-bar {
+    height: 50px;
     position: relative;
     z-index: 2;
     display: flex;
@@ -21,7 +31,7 @@
   }
   a,
   &:visited  {
-    color: white;
+    color: #333;
   }
   .list-items-container {
     padding: 5px;
@@ -34,6 +44,7 @@
       margin: 10px;
       .title-list{
         display: none;
+        color: #333;
       }
     }
   }
@@ -64,6 +75,12 @@
     }
     .swiper-container {
       margin-top: 0;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    .navigation-bar {
+      justify-content: flex-end;
     }
   }
 }
