--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -15,16 +15,23 @@ $torquoise: #3fb0ac;
 $dark-torquoise: #173e43;
 $gray: #dddfd4;
 
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Quicksand');
+
 html {
   box-sizing: border-box;
   body {
     font-size: 0.9em;
     margin: 0;
+    box-sizing: border-box;
+    font-family: 'Quicksand', sans-serif;
+
   }
   h1,
   h2,
   h3 {
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
   }
 
   h1 {
@@ -34,20 +41,107 @@ html {
   }
 
   h3 {
-    font-size: 20px;
+    line-height: 1.3em;
     font-weight: bold;
-    color: $dark-torquoise;
+    color: #333;
     margin: 0;
+    font-size: 23px;
   }
   p{
-    font-size: 14px;
+    font-size: 16px;
+    color: #aaa;
     font-weight: normal;
+
   }
   a {
     text-decoration: none;
     font-size: 16px;
+
     &:hover {
       text-decoration: underline;
     }
   }
+
+  .layout-content {
+    margin: 3rem 2rem;
+    overflow: hidden;
+  }
+}
+
+
+.text-in{
+    animation: upAndFadeInAnimation ease-out 0.8s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+    -webkit-animation: upAndFadeInAnimation ease-out 0.8s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-transform-origin: 50% 50%;
+    -moz-animation: upAndFadeInAnimation ease-out 0.8s;
+    -moz-animation-iteration-count: 1;
+    -moz-transform-origin: 50% 50%;
+    -o-animation: upAndFadeInAnimation ease-out 0.8s;
+    -o-animation-iteration-count: 1;
+    -o-transform-origin: 50% 50%;
+    -ms-animation: upAndFadeInAnimation ease-out 0.8s;
+    -ms-animation-iteration-count: 1;
+    -ms-transform-origin: 50% 50%;
+
+    opacity: 1;
+}
+
+
+
+@keyframes upAndFadeInAnimation{
+0% {
+      opacity:0;
+      transform:  translate(0px,80px)  ;
+  }
+100% {
+       opacity:1;
+       transform:  translate(0px,0px)  ;
+   }
+}
+
+@-moz-keyframes upAndFadeInAnimation{
+0% {
+      opacity:0;
+      -moz-transform:  translate(0px,80px)  ;
+  }
+100% {
+       opacity:1;
+       -moz-transform:  translate(0px,0px)  ;
+   }
+}
+
+@-webkit-keyframes upAndFadeInAnimation {
+0% {
+      opacity:0;
+      -webkit-transform:  translate(0px,80px)  ;
+  }
+100% {
+       opacity:1;
+       -webkit-transform:  translate(0px,0px)  ;
+   }
+}
+
+@-o-keyframes upAndFadeInAnimation {
+0% {
+      opacity:0;
+      -o-transform:  translate(0px,80px)  ;
+  }
+100% {
+       opacity:1;
+       -o-transform:  translate(0px,0px)  ;
+   }
+}
+
+@-ms-keyframes upAndFadeInAnimation {
+0% {
+      opacity:0;
+      -ms-transform:  translate(0px,80px)  ;
+  }
+100% {
+       opacity:1;
+       -ms-transform:  translate(0px,0px)  ;
+   }
 }
