--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,5 +1,8 @@
+@import 'vars';
+@import 'helpers';
 @import 'custom';
 @import 'app';
 @import 'corsi';
 @import 'swiper';
 @import 'sports';
+@import 'team';
